--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
     volumes:
       - ./build/libs/:/piggybank-api
-    command: java -jar piggybank-api-1.0-SNAPSHOT-all.jar
+    command: java -jar piggybank-api-1.0-SNAPSHOT.jar
     ports:
       - "8080:8080"
     depends_on:
